add lazy loading in product module

--- a/src/app/component/product/product-list/product-list.component.html
+++ b/src/app/component/product/product-list/product-list.component.html
@@ -2,7 +2,7 @@
 <div>
   <ul>
     <li *ngFor="let product of productList">
-      <a [routerLink]="['/product', product.id]">{{ product.title }}</a>
+      <a [routerLink]="['/products', product.id]">{{ product.title }}</a>
     </li>
   </ul>
 </div>
